# beamfall

./: .gitignore  AGENT_CONTEXT.md  LICENSE  README.md  index.html  package-lock.json  package.json  tsconfig.json  vite.config.ts  vitest.config.ts
.github/workflows/: build-windows.yml  build.yml  ci.yml
src/: main.ts  types.ts
src-tauri/: Cargo.toml  tauri.conf.json
src-tauri/icons/: icon.icns
src-tauri/src/: lib.rs  main.rs
src/engine/: loop.ts  replay.ts
src/engine/audio/: engine.ts  music.ts  sfx.ts
src/engine/input/: bindings.ts  gamepad.ts  keyboard.ts  snapshot.ts
src/engine/render/: abilityFx.ts  bloom.ts  debug.ts  particles.ts  stage.ts  world.ts
src/game/: characters.ts  events.ts  mutators.ts  rng.ts  rules.ts  stats.ts  world.ts
src/game/arenas/: colosseum24x14.ts  cross10x10.ts  grid8x6.ts  index.ts  maze18x12.ts  mega20x14.ts  tall6x10.ts  wide12x6.ts
src/game/entities/: laser.ts  node.ts  pickup.ts  player.ts
src/game/systems/: abilities.ts  collision.ts  effects.ts  laserScheduler.ts  movement.ts  nodeActivation.ts  pickups.ts  scoring.ts
src/ui/: hud.ts  lobby.ts  menu.ts  pauseMenu.ts  statsScreen.ts
tests/: abilities.test.ts  beat.test.ts  events.test.ts  hitStop.test.ts  replay.test.ts  scoring.test.ts  stats.test.ts
