[package]
name = "beamfall"
version = "0.1.0"
description = "Laser League-inspired open-source local multiplayer arena game."
authors = ["Beamfall contributors"]
license = "MIT"
edition = "2021"
rust-version = "1.77"

[lib]
name = "beamfall_lib"
crate-type = ["staticlib", "cdylib", "rlib"]

[build-dependencies]
tauri-build = { version = "2", features = [] }

[dependencies]
tauri = { version = "2", features = [] }
serde = { version = "1", features = ["derive"] }
serde_json = "1"

[profile.release]
panic = "abort"
codegen-units = 1
lto = true
opt-level = "s"
strip = true
